fixing z-index

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 
 .section_logo {
   position: relative;
-  z-index: 3;
+  z-index: 1;
 }
 
 /* ----------------------------
